--- a/.ci.yml
+++ b/.ci.yml
@@ -9,9 +9,9 @@ build:
         docker_image_name: acx-ui
         docker_image_tag: SNAPSHOT
         dockerfile: Dockerfile.ui
-        sonar:
-            sonar_property: sonar-project.properties
-            code_report_dir: /app/coverage
-            sonar_scan_based_tag: acx-ui-sonar-run
+          #sonar:
+          #    sonar_property: sonar-project.properties
+          #    code_report_dir: /app/coverage
+          #    sonar_scan_based_tag: acx-ui-sonar-run
   - directory: configs
     build_type: ci
