--- a/.ci.yml
+++ b/.ci.yml
@@ -3,7 +3,7 @@ ci_version: v1
 build:
   - directory: .
     build_type: dockerfile
-    docker_buildkit: true
+    docker_buildkit: false
     images:
       - image: acx-ui
         docker_image_name: acx-ui
