--- a/Dockerfile.nxcache
+++ b/Dockerfile.nxcache
@@ -37,6 +37,17 @@ FROM acx-ui-base-test AS acx-ui-group1-test
 ARG PRECOMMIT
 ARG GIT_COMMIT_BRANCH
 
+# Copy the tar.xz file if it exists
+COPY nxcache/nxcache.tar.xz* ./
+
+# Extract it only if the file exists
+RUN mkdir -p ./node_modules/.cache/nx
+RUN tar -xJf ./nxcache.tar.xz -C ./node_modules/.cache/nx
+
+# Remove files and folders older than 24 hours from the nx cache
+RUN find /app/node_modules/.cache/nx -type f -mmin +1440 -delete && \
+    find /app/node_modules/.cache/nx -type d -empty -delete
+
 RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
 ENV NX_RUN_OPTIONS="--coverage --maxWorkers=30% --noStackTrace --bail"
 
