--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -49,9 +49,15 @@
 # restriction will be at bitbucket level per group enforcement
 
 # @@@group1   	@user1 @user2
+@@@TDC  @"JDENG1" @"KYEH" @"GCHIU" @"YGUO1" @"TLIN4" @"yw1046" @"JCHIU1" @"JSYU" @"PLIN" @"cl1092" @"JKAO1" @"ac1236" @"rl1093"
+@@@SGDC @"JCHEOW" @"STAN2" @"MDEHEZ"
+@@@BDC  @"sb1212" @"VKANDHVAR"
+@@@HQ   @"ELEU"
+
 # @@@group2   	@user1 @user2
 
 # Start adding the rules from here
+* @@TDC @@SGDC @@BDC @@HQ
 
 # Update CODEOWNERS accordingly
 # CODEOWNERS              @user1 @user2
@@ -63,3 +69,4 @@ CODEOWNERS.destination_branch_pattern release/*
 # Suppress info comment on pull request creation about added code owners. Info comment will be added by default.
 # CODEOWNERS.toplevel.create_pull_request_comment disable
 /api-docs/*     @@"api-docs-review-team"
+
