ACX-74345: Update the codeowner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -57,7 +57,6 @@
 # @@@group2   	@user1 @user2
 
 # Start adding the rules from here
-* @@TDC @@SGDC @@BDC @@HQ
 
 # Update CODEOWNERS accordingly
 # CODEOWNERS              @user1 @user2
@@ -69,4 +68,4 @@ CODEOWNERS.destination_branch_pattern release/*
 # Suppress info comment on pull request creation about added code owners. Info comment will be added by default.
 # CODEOWNERS.toplevel.create_pull_request_comment disable
 /api-docs/*     @@"api-docs-review-team"
-
+/** @@TDC @@SGDC @@BDC @@HQ
