--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -49,12 +49,13 @@
 # restriction will be at bitbucket level per group enforcement
 
 # @@@group1   	@user1 @user2
-@@@UI  @"JDENG1" @"KYEH" @"GCHIU" @"YGUO1" @"TLIN4" @"yw1046" @"JCHIU1" @"JSYU" @"PLIN" @"cl1092" @"JKAO1" @"ac1236" @"rl1093" @"JCHEOW" @"STAN2" @"MDEHEZ" @"sb1212" @"VKANDHVAR" @"ELEU" @"CBOKIL"
+@@@default-UI  @"JDENG1" @"KYEH" @"GCHIU" @"YGUO1" @"TLIN4" @"yw1046" @"JKAO1"
+@@@optional-UI  @"JCHIU1" @"JSYU" @"PLIN" @"cl1092" @"ac1236" @"rl1093" @"JCHEOW" @"STAN2" @"MDEHEZ" @"sb1212" @"VKANDHVAR" @"ELEU" @"CBOKIL"
 
 # @@@group2   	@user1 @user2
 
 # Start adding the rules from here
-* @@UI
+* @@default-UI
 
 # For every group at least somebody must approve
 AllGroupsCheck(1)
