--- a/Dockerfile.ra
+++ b/Dockerfile.ra
@@ -64,7 +64,7 @@ COPY tools/docker/nginx/ra.conf /etc/nginx/conf.d/default.conf
 COPY tools/docker/nginx/conf.d/gzip.conf /etc/nginx/conf.d/gzip.conf
 COPY tools/docker/nginx/globalValues-ra.json.template /etc/nginx/globalValues.json.template
 COPY tools/docker/nginx/nginx.conf \
-  tools/docker/nginx/start-nginx.sh \
+  tools/docker/nginx/start-nginx-ra.sh \
   /etc/nginx/
 
 COPY --from=build /app/dist/apps ./
@@ -79,4 +79,4 @@ RUN \
 
 EXPOSE 8080
 
-CMD ["/bin/sh", "/etc/nginx/start-nginx.sh"]
+CMD ["/bin/sh", "/etc/nginx/start-nginx-ra.sh"]
