--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,7 @@
       "@acx-ui/rc/components": ["libs/rc/shared/components/src/index.ts"],
       "@acx-ui/rc/services": ["libs/rc/shared/services/src/index.ts"],
       "@acx-ui/rc/utils": ["libs/rc/shared/utils/src/index.ts"],
+      "@acx-ui/cloudpath/components": ["libs/rc/cloudpath/components/src/index.ts"],      
       "@acx-ui/switch/components": ["libs/rc/switch/components/src/index.ts"],
       "@acx-ui/wifi/components": ["libs/rc/wifi/components/src/index.ts"],
       "@acx-ui/edge/components": ["libs/rc/edge/components/src/index.ts"],
