ACX-72193: add UT and increase coverage

--- a/libs/rc/edge/components/tsconfig.json
+++ b/libs/rc/edge/components/tsconfig.json
@@ -13,6 +13,7 @@
   },
   "files": [],
   "include": [],
+  "types": ["jest", "node", "@testing-library/jest-dom"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
