--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@photostructure/tz-lookup": "8.0.0",
     "@reduxjs/toolkit": "1.9.7",
     "@rtk-query/graphql-request-base-query": "2.2.0",
+    "@smartesting/flaky-test-detector": "1.0.3",
     "@splitsoftware/splitio-react": "1.4.1",
     "@superset-ui/embedded-sdk": "0.1.0-alpha.8",
     "@types/react-highlight-words": "0.16.4",
@@ -164,6 +165,7 @@
     "http-proxy-middleware": "2.0.6",
     "jest": "27.5.1",
     "jest-canvas-mock": "2.4.0",
+    "jest-junit": "16.0.0",
     "jest-styled-components": "7.2.0",
     "jest-websocket-mock": "2.3.0",
     "js-yaml": "4.1.0",
