--- a/.ci.yml
+++ b/.ci.yml
@@ -13,5 +13,6 @@ build:
             sonar_property: sonar-project.properties
             code_report_dir: /app/coverage
             sonar_scan_based_tag: acx-ui-sonar-run
+            sonar_scan_image_tag: sonar-stage
   - directory: configs
     build_type: ci
